# ai_personal_wiki

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.en.md  README.md  README.ru.md  TODO.md  docker-compose-prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  windows_start.txt
app/: config.py
config/: settings.yaml
docs/: QA01.md  REVIEW_STAGE1.md  agents_sheme.md  code_review_2026-05-25.md  coding_agent_doc_ingest_fix_plan.md  coding_agent_review_fixes_plan.md  conflict_resolution_report.md  corporate_edition_roadmap.md  demo_readiness_tasks.md  implementation_plan_sprint1-3.md  large_scale_wiki_proposal.md  multi_user_sqlite_control_plane_implementation.md  multi_user_sqlite_control_plane_spec.md  mvp_decisions_and_debt_ru.md  mvp_known_limits_ru.md  mvp_release_plan_ru.md  mvp_runbook_ru.md  mvp_test_plan_ru.md  review-2026-06-14-wiki-state.md  review_fixes_spec_2026-06-13.md  session-2026-06-13-review-followup.md  session-2026-06-13.md  specification_review_2026-05-21.md  test_processing_expected_behavior.md  wiki_engine_improvement_plan.md  wiki_engine_project_roadmap.md  wiki_ingest_pipeline.md
test_raw/: INGEST_TEST_PREDICTIONS.md
tests/: test_api.py  test_auth.py  test_batch_ingest.py  test_browser_auth_flow.py  test_claims.py  test_config.py  test_conflicts.py  test_control_store.py  test_ingest_agent.py  test_interpreter.py  test_large_source_ingest.py  test_linter.py  test_metered_llm.py  test_query_agent.py  test_raw_sources.py  test_safe_page_updates.py  test_search_regression.py  test_token_budget.py  (+3 more)
(+72 files in other folders)
