[project]
name = "wiki-engine"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.30",
    "python-frontmatter>=1.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "markdown>=3.6",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.9",
    "watchdog>=4.0",
    "httpx>=0.27",   # for tests
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501", "RUF001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]